Created a JS reference

--- a/P13HTMLDOM/index.html
+++ b/P13HTMLDOM/index.html
@@ -25,9 +25,9 @@
 <body>
 
   <!-- Add your site or application content here -->
-  <p>Hello world! This is HTML5 Boilerplate.</p>
+  <p id = "text0"> Hola Hola Peaches </p>
+  <h5 id = "header5"> This is my new site</h5>
   <script src="js/app.js"></script>
-
 </body>
 
 </html>
