Tried to solve the exercise

--- a/P13HTMLDOM/index.html
+++ b/P13HTMLDOM/index.html
@@ -26,7 +26,12 @@
 
   <!-- Add your site or application content here -->
   <p id = "text0"> Hola Hola Peaches </p>
-  <h5 id = "header5"> This is my new site</h5>
+  <h5 id = "text1"> Nicolina</h5>
+  <button id = "button0">Till bloggen</button>
+
+ <p id = "text"> score </p>
+  <button id = "button1"> knapp </button>
+
   <script src="js/app.js"></script>
 </body>
 
