Linked HTML to JS app and Created a Clickable Button

--- a/playGround/index.html
+++ b/playGround/index.html
@@ -25,7 +25,10 @@
 <body>
 
   <!-- Add your site or application content here -->
-  <p>Hello world! This is HTML5 Boilerplate.</p>
+  <p id = "firstText"> Welcome!</p>
+ <button id = "firstButton"> textOnButton</button>
+
+
   <script src="js/app.js"></script>
 
 </body>
