--- a/playGround/index.html
+++ b/playGround/index.html
@@ -28,6 +28,9 @@
   <p id = "firstText"> Welcome!</p>
  <button id = "firstButton"> textOnButton</button>
 
+  <p id = "secondText"> text </p>
+<button id = "secondButton"> Button </button>
+
 
   <script src="js/app.js"></script>
 
