Created a new Playground

--- a/playGround2/index.html
+++ b/playGround2/index.html
@@ -25,14 +25,9 @@
 <body>
 
   <!-- Add your site or application content here -->
-   <p id = "firstText"> Welcome!</p>
- <button id = "firstButton"> textOnButton</button>
+  <p id = "text0">Zero clicks</p>
 
-  <p id = "secondText"> text </p>
-<button id = "secondButton"> Button </button>
-
-  <button id = "inCreaseScoreButton"> . </button>
-
+  <button id = "button0"> Click here!</button>
 
   <script src="js/app.js"></script>
 
