--- a/playGround2/index.html
+++ b/playGround2/index.html
@@ -25,7 +25,7 @@
 <body>
 
   <!-- Add your site or application content here -->
-  <p id = "text0">Zero clicks</p>
+  <p id = "text0">No score</p>
 
   <button id = "button0"> Click here!</button>
 
