--- a/playGround/index.html
+++ b/playGround/index.html
@@ -25,13 +25,12 @@
 <body>
 
   <!-- Add your site or application content here -->
-   <p id = "firstText"> Welcome!</p>
- <button id = "firstButton"> textOnButton</button>
+<p id = "playerRollText">no player result</p>
+ <button id = "button0"> Roll the Dice!</button>
 
-  <p id = "secondText"> text </p>
-<button id = "secondButton"> Button </button>
 
-  <button id = "inCreaseScoreButton"> . </button>
+
+
 
 
   <script src="js/app.js"></script>
